--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
-html {
-  font-family: Poppins, system-ui, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    html {
+      font-family: Poppins, system-ui, sans-serif;
+    }
 }
