--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,17 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-      font-family: Poppins, system-ui, sans-serif;
-    }
+  :root {
+      --tec-blue: #0658A6;
+      --true-blue: #0566CF;
+      --yale-blue: #074A7D;
+      --gray-100: #f3f4f6;
+      --gray-500: #6b7280;
+      --gray-900: #111827;
+  }
+
+  html {
+    font-family: Poppins, system-ui, sans-serif;
+  }
+
 }
