--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,13 @@
       --true-blue: #0566CF;
       --yale-blue: #074A7D;
       --gray-100: #f3f4f6;
+      --gray-300: #d1d5db;
       --gray-500: #6b7280;
+      --gray-600: #4b5563;
       --gray-900: #111827;
   }
 
   html {
     font-family: Poppins, system-ui, sans-serif;
   }
-
 }
