Create static register section

--- a/src/styles/ingresar-registrarse.css
+++ b/src/styles/ingresar-registrarse.css
@@ -82,13 +82,17 @@ input.top-input {
     border-bottom-color: transparent;
 }
 
-input.top-input:focus {
-    border-bottom-color: var(--tec-blue);
+input.middle-input {
+    border-bottom-color: transparent;
 }
 
 input.bottom-input {
     border-bottom-left-radius: 0.375rem;
     border-bottom-right-radius: 0.375rem;
+}
+
+input.top-input:focus + input.middle-input:focus + input.bottom-input:focus {
+    border-color: var(--tec-blue);
 }
 
 .password-box {
