Create sidebar in 'Mecanismos de Cuatro Barras' section

--- a/src/pages/Ejercicios/styles/cuatroBarras.css
+++ b/src/pages/Ejercicios/styles/cuatroBarras.css
@@ -37,3 +37,9 @@
     width: calc(1/2 * 100%);
     vertical-align: top;
 }
+
+.cuatro-barras-space {
+    display: table-cell;
+    width: 25%;
+    vertical-align: top;
+}
