--- a/src/pages/Ejercicios/styles/cuatroBarras.css
+++ b/src/pages/Ejercicios/styles/cuatroBarras.css
@@ -1,9 +1,10 @@
 .cuatro-barras-content {
+    background-color: white;
     display: table;
     width: 100%;
     height: 100%;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .sidebar-content {
@@ -42,4 +43,46 @@
     display: table-cell;
     width: 25%;
     vertical-align: top;
+}
+
+p {
+    text-align: justify;
+    font-size: large;
+}
+
+.exercise-content {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.exercise-content .subtitle-box {
+    text-align: center;
+    padding-top: 0.5rem;
+}
+
+.exercise-content .subtitle-box h2.subtitle {
+    margin-top: 0.5rem;
+    font-size: 1.75rem;
+    line-height: 2rem;
+    font-weight: 700;
+    letter-spacing: -0.025em;
+    color: var(--gray-900);
+}
+
+.exercise-content .parragraph-box {
+    display: flex;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    justify-content: center;
+}
+
+.canvas-box {
+    display: flex;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    justify-content: center;
+}
+
+.canvas-box svg.canvas:hover {
+    cursor: crosshair;
 }
