Change 'Cuatro Barras' to 'Cinematica Dinamica Mecanismos'

--- a/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
+++ b/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
@@ -50,17 +50,17 @@ p {
     font-size: large;
 }
 
-.exercise-content {
+.section-content {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
 
-.exercise-content .subtitle-box {
+.section-content .subtitle-box {
     text-align: center;
     padding-top: 0.5rem;
 }
 
-.exercise-content .subtitle-box h2.subtitle {
+.section-content .subtitle-box h2.subtitle {
     margin-top: 0.5rem;
     font-size: 1.75rem;
     line-height: 2rem;
@@ -69,7 +69,7 @@ p {
     color: var(--gray-900);
 }
 
-.exercise-content .parragraph-box {
+.section-content .paragraph-box {
     display: flex;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
