Add reset button to canvas

--- a/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
+++ b/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
@@ -86,3 +86,31 @@ p {
 .canvas-box svg.canvas:hover {
     cursor: crosshair;
 }
+
+.button-box {
+    display: flex;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    justify-content: center;
+}
+
+.button-box button.canvas-button {
+    position: relative;
+    width: 15rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    border-width: 1px;
+    border-color: white;
+    font-size: 0.85rem;
+    font-weight: 500;
+    border-radius: 0.4rem;
+    color: white;
+    background-color: var(--tec-blue);
+}
+
+.button-box button.canvas-button:hover {
+    background-color: #074A7D;
+}
+
+.button-box button.canvas-button:focus {
+    outline: none;
+}
