--- a/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
+++ b/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
@@ -114,3 +114,38 @@ p {
 .button-box button.canvas-button:focus {
     outline: none;
 }
+
+.table-box {
+    display: flex;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    justify-content: center;
+}
+
+.table-box .table-container {
+    position: relative;
+    width: 90%;
+    overflow-x: auto;
+    border-radius: 0.5rem;
+}
+
+.table-box .table-container table {
+    width: 100%;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    text-align: center;
+    color: var(--gray-900);
+}
+
+.table-box .table-container thead {
+    color: white;
+    background-color: var(--tec-blue);
+}
+
+.table-box .table-container th {
+    padding: 0.75rem 1.5rem;
+}
+
+.table-box .table-container td {
+    padding: 1rem 1.5rem;
+}
