Add vectors, axis and equations in position analysis section

--- a/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
+++ b/src/pages/Ejercicios/styles/cinematicaDinamicaMecanismos.css
@@ -104,6 +104,10 @@ p {
     justify-content: center;
 }
 
+.overflow-equation {
+    font-size: 1rem;
+}
+
 .canvas-box {
     display: flex;
     padding-top: 0.75rem;
