--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
       --gray-900: #111827;
   }
 
+  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
   html {
     font-family: Poppins, system-ui, sans-serif;
   }
