Set Logo as independent element

--- a/src/styles/ejercicios.css
+++ b/src/styles/ejercicios.css
@@ -1,7 +1,7 @@
 .exercises-content {
     background-color: white;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .exercises-header-box {
