--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -7,6 +7,14 @@ header {
     margin: auto;
 }
 
+.logo-box {
+    display: flex;
+    justify-content: center;
+    flex: 1 1 0%;
+    margin-top: 1.25rem;
+    margin-bottom: -4rem;
+}
+
 .header-box .header-items {
     display: flex;
     justify-content: space-between;
@@ -17,65 +25,35 @@ header {
     border-color: var(--gray-100);
 }
 
-.header-items nav.nav-box {
+nav {
+    display: flex;
+    align-items: center;
+    flex: 1 1 0%;
+}
+
+nav .nav-box {
     display: flex;
     justify-content: flex-start;
     flex: 1 1 0%;
 }
 
-nav.nav-box .header-breadcrumb {
+.nav-box .header-breadcrumb {
+    padding-left: 1rem;
+    padding-right: 1rem;
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 500;
     color: var(--gray-500);
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
 }
 
-nav.nav-box .header-breadcrumb:hover {
+.nav-box .header-breadcrumb:hover {
     color: var(--gray-900);
 }
 
-.header-items .logo-box {
+nav .login-nav-box {
     display: flex;
-    justify-content: center;
-    flex: 1 1 0%;
-}
-
-.logo-box .logo {
-    display: flex;
-    align-items: center;
-    text-align: justify;
-}
-
-.logo img {
-    margin-right: 0.75rem;
-    height: 3rem;
-    width: auto;
-}
-
-.logo .logo-text {
-    display: flex;
-    flex-direction: column;
-    color: var(--tec-blue);
-    font-weight: 600;
-    align-content: space-around;
-}
-
-.logo-text .logo-subtitle-text p {
-    font-size: 0.75rem;
-    margin-bottom: -0.5rem;
-}
-
-.logo-text .logo-title-text p {
-    font-size: 1rem;
-    letter-spacing: -0.025rem;
-}
-
-.header-items .login-nav-box {
-    display: flex;
-    align-items: center;
     justify-content: flex-end;
+    align-items: center;
     flex: 1 1 0%;
 }
 
@@ -110,6 +88,27 @@ nav.nav-box .header-breadcrumb:hover {
     background-color: var(--yale-blue);
 }
 
+@media only screen and (max-width: 1024px) {
+    .logo-box {
+        margin-bottom: 0;
+    }
+
+    .header-box .header-items {
+        justify-content: center;
+    }
+
+    nav {
+        all: unset;
+        display: flex;
+        align-items: center;
+    }
+
+    nav .login-nav-box {
+        justify-content: center;
+        margin-left: 1rem;
+    }
+}
+
 footer {
     position: relative;
 }
@@ -124,6 +123,12 @@ footer .footer-box {
     padding-bottom: 1.25rem;
     border-bottom-width: 2px;
     border-color: var(--gray-100);
+}
+
+.logo-footer-box {
+    display: flex;
+    justify-content: flex-start;
+    flex: 1 1 0%;
 }
 
 .footer-box .footer-items {
