Add responsive grid in 'Ejercicios' section

--- a/src/pages/Ejercicios/styles/ejercicios.css
+++ b/src/pages/Ejercicios/styles/ejercicios.css
@@ -1,14 +1,23 @@
-.exercises-content {
+section.section {
     background-color: white;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    width: 100%;
+    display: block;
 }
 
-.exercises-header-box {
+.section-wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 83.6%;
+    margin: 0 auto;
+    padding: 2rem 0;
     text-align: center;
 }
 
-.exercises-header-box h1.exercises-header-title {
+.exercises-title-box {
+    text-align: center;
+}
+
+h1.exercises-header-title {
     margin-top: 0.5rem;
     font-size: 2.5rem;
     line-height: 2.25rem;
@@ -17,7 +26,7 @@
     color: #111827;
 }
 
-.exercises-header-box h2.exercises-header-subtitle {
+h2.exercises-header-subtitle {
     font-size: 1rem;
     line-height: 1.5rem;
     color: var(--tec-blue);
@@ -26,48 +35,52 @@
     text-transform: uppercase;
 }
 
-.exercises-content p.exercises-slogan {
-    margin: 1rem auto auto auto;
-    max-width: 42rem;
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-    color: var(--gray-500);
+.topic-grid {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 1.5rem 0;
 }
 
-.exercises-grid-container {
-    max-width: 72rem;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
-.exercises-grid-container .grid-container {
-    margin-top: 1.5rem;
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    column-gap: 3rem;
-}
-
-.grid-container .grid-element {
+.topic-card {
     position: relative;
-    width: 100%;
-    height: 14rem;
-    background-color: white;
-    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    padding: 1.25rem;
     overflow: hidden;
+    border-radius: 0.5rem;
+    text-align: left;
 }
 
-h3.subject-title {
-    margin-top: 1.5rem;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+.topic-card:hover {
+    background-color: var(--tec-blue);
+}
+
+.topic-card img {
+    width: 230px;
+    height: 150px;
+    border-radius: 0.5rem;
+}
+
+h3.topic-title {
+    margin-top: 0.75rem;
+    font-size: 0.825rem;
+    line-height: 1rem;
     color: var(--gray-500);
 }
 
-p.exercise-title {
-    font-size: 1rem;
+.topic-card:hover h3.topic-title {
+    color: white;
+}
+
+h4.exercise-title {
+    font-size: 0.825rem;
     line-height: 1.5rem;
     font-weight: 600;
     color: var(--gray-900);
+}
+
+.topic-card:hover h4.exercise-title {
+    color: #7dd3fc;
+    font-weight: 500;
 }
