--- a/src/pages/Ejercicios/pages/CinematicaDinamicaMecanismos/styles/cinematicaDinamicaMecanismos.css
+++ b/src/pages/Ejercicios/pages/CinematicaDinamicaMecanismos/styles/cinematicaDinamicaMecanismos.css
@@ -1,48 +1,24 @@
-.cuatro-barras-content {
+main {
     background-color: white;
-    display: table;
     width: 100%;
-    height: 100%;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-
-.sidebar-content {
-    display: table-cell;
-    width: 25%;
-    vertical-align: top;
-}
-
-.sidebar-box {
-    display: table;
-    width: 100%;
-    height: 100%;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-}
-
-.sidebar-box .sidebar-space {
-    display: table-cell;
-    width: calc(1/3 * 100%);
-    vertical-align: top;
-}
-
-.sidebar-box .sidebar-content {
-    display: table-cell;
-    width: calc(2/3 * 100%);
-    vertical-align: top;
+    display: block;
 }
 
 .main-content {
-    display: table-cell;
-    width: calc(1/2 * 100%);
-    vertical-align: top;
+    max-width: 860px;
+    padding: 2rem 1.5rem;
+    position: relative;
+    top: 0;
+    margin: auto;
 }
 
-.cuatro-barras-space {
-    display: table-cell;
-    width: 25%;
-    vertical-align: top;
+.right-space {
+    max-width: 280px;
+    padding: 2rem 1.5rem;
+}
+
+@media only screen and (max-width: 1440px) {
+    
 }
 
 p {
