Complete 'Analisis de posicion' section

--- a/src/pages/Ejercicios/pages/CinematicaMecanismos/styles/cinematicaMecanismos.css
+++ b/src/pages/Ejercicios/pages/CinematicaMecanismos/styles/cinematicaMecanismos.css
@@ -60,7 +60,7 @@ main {
     display: flex;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    justify-content: center;
+    justify-content: left;
 }
 
 .paragraph-box #concept {
