--- a/src/pages/Ejercicios/pages/CinematicaMecanismos/styles/cinematicaMecanismos.css
+++ b/src/pages/Ejercicios/pages/CinematicaMecanismos/styles/cinematicaMecanismos.css
@@ -74,6 +74,13 @@ main {
     justify-content: center;
 }
 
+.equation-number {
+    display: flex;
+    position: absolute;
+    right: 0;
+    margin-right: 1.75rem;
+}
+
 .overflow-equation {
     font-size: 1rem;
 }
