Repair CSS features

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -117,10 +117,9 @@ footer .footer-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 83.6%;
+    max-width: 97%;
     margin: auto;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+    padding: 1.25rem 1.5rem;
     border-bottom-width: 2px;
     border-color: var(--gray-100);
 }
