--- a/src/styles/ingresar-registrarse.css
+++ b/src/styles/ingresar-registrarse.css
@@ -1,6 +1,7 @@
 .content {
-    min-height: 100%;
     display: flex;
+    position: relative;
+    padding: 3rem 1rem;
     align-items: center;
     justify-content: center;
 }
@@ -11,19 +12,19 @@
     margin-top: 2rem;
 }
 
-.title-box .title-logo {
-    margin-left: auto;
-    margin-right: auto;
+img.title-logo {
+    margin: auto;
     height: 3rem;
     width: auto;
 }
 
-.title-box .title {
+.title-box .login-title {
     margin-top: 1.5rem;
     text-align: center;
     font-size: 1.875rem;
     line-height: 2.25rem;
     font-weight: 700;
+    letter-spacing: -0.025rem;
     color: var(--gray-900);
 }
 
@@ -33,6 +34,7 @@ p.description {
     font-size: 0.875rem;
     line-height: 1.25rem;
     color: var(--gray-600);
+    font-family: Poppins, system-ui, sans-serif;
 }
 
 .register-link {
@@ -50,7 +52,10 @@ form {
 
 .login-box {
     border-radius: 0.375rem;
+    margin-top: 1px;
     margin-bottom: 1.5rem;
+    border-radius: 0.375rem;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
 }
 
 .login-box input {
