Create responsive footer

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,50 +1,90 @@
-footer {
+footer.Footer-footer {
     position: relative;
-}
-
-footer .footer-box {
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    max-width: 97%;
-    margin: auto;
-    padding: 1.25rem 1.5rem;
-    border-bottom-width: 2px;
-    border-color: var(--gray-100);
-}
-
-.logo-footer-box {
-    display: flex;
-    justify-content: flex-start;
-    flex: 1 1 0%;
-}
-
-.footer-box .footer-items {
-    display: flex;
     flex-wrap: wrap;
+    padding: 2rem;
+    background-color: white;
+    overflow: hidden;
+}
+
+.Footer-title {
+    display: flex;
     align-items: center;
+    flex-grow: 1;
+    text-align: center;
+}
+
+.Footer-break {
+    flex-grow: 1;
+}
+
+nav.Footer-Big-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-start;
+    width: 100%;
+    padding: 0 1rem 1.5rem;
+}
+
+.Footer-link {
+    padding: 0.625rem 1rem;
+    text-align: center;
     font-size: 0.875rem;
     line-height: 1.25rem;
     color: var(--gray-500);
 }
 
-.footer-items .footer-breadcrumb {
-    margin-right: 1.5rem;
+.Footer-link:hover {
+    color: var(--gray-900);
 }
 
-.footer-items .footer-breadcrumb:hover {
-    text-decoration: underline;
+.Footer-licence {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1.5rem 0;
+    border-top-width: 2px;
+    border-color: var(--gray-100);
 }
 
-footer .license-block {
-    margin-bottom: 2rem;
-}
-
-.license-block .license {
-    display: block;
-    margin-top: 1.25rem;
+.Footer-Licence-text {
+    display: flex;
     font-size: 0.875rem;
     line-height: 1.25rem;
     color: var(--gray-500);
     text-align: center;
 } 
+
+.Footer-Licence-link:hover {
+    text-decoration: underline;
+}
+
+@media only screen and (max-width: 1000px) {
+    .Footer-title {
+        display: none !important;
+    }
+
+    .Footer-break {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    nav.Footer-Big-nav {
+        display: none;
+    }
+    
+    .Footer-licence {
+        display: flex;
+        flex-direction: column;
+        width: 97%;
+    }
+
+    .Footer-licence-text {
+        width: 100%;
+    }
+}
