--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -131,6 +131,7 @@ button.Header-button {
         max-width: fit-content;
         margin-left: 0;
         margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
     }
 
     button.Header-button {
